# boomerang

./: CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
chestburster/: .gitignore  pyproject.toml
chestburster/chestburster/: __init__.py  chestburster.py  logger.py
chestburster/chestburster/protocols/: control.py  ssh_mixin.py
chestburster/chestburster/targets/: __init__.py  executor.py  launcher.py  syscall_fwd.py  tracer.py
chestburster/examples/: binutils.py
chestburster/examples/kbuf/: Makefile  forward.py
chestburster/tests/: config.py  test_coreutils.py
dbg/pexecutor/: Cargo.toml
dbg/pexecutor/src/: executing_thread.rs  main.rs
dbg/ptracer/: Cargo.toml
dbg/ptracer/src/: main.rs  tracing_thread.rs
dbg/simple_ptracer/: Cargo.toml
dbg/simple_ptracer/src/: main.rs
ptracer/: Cargo.toml
ptracer/src/: main.rs  operation.rs  tracing_thread.rs
sysforward/: Cargo.toml  README.md
sysforward/decode_derive/: Cargo.toml
sysforward/decode_derive/src/: lib.rs
sysforward/src/: lib.rs  operation.rs  sync.rs  syscall.rs  tracer_engine.rs
sysforward/src/arch/: mod.rs  x86_64.rs
sysforward/src/executor_engine/: executor_engine.rs  invoker.rs  mod.rs
sysforward/src/network/: mod.rs
sysforward/src/protocol/: control.rs  data.rs  dispatcher.rs  mod.rs  serialize.rs  sysfwd.proto  tcp.rs  udp.rs  worker.rs
sysforward/src/protocol/old/: dispatcher.rs  message.rs
sysforward/src/protocol/udp/: client.rs  mod.rs  server.rs
sysforward/src/protocol/udp.old/: client.rs  server.rs
sysforward/src/syscall/: access.rs  args.rs  dirent.rs  epoll.rs  execve.rs  exit.rs  fallocate.rs  file_handle.rs  filesystem.rs  getrandom.rs  io.rs  ioctl.rs  lseek.rs  memfd.rs  mknod.rs  mmap.rs  mod.rs  open.rs  prctl.rs  renameat.rs  resource.rs  robust_list.rs  rseq.rs  stat.rs  statx.rs  template.rs  tid.rs  truncate.rs  x86.rs
sysforward/src/targets/: mod.rs  ptrace.rs
sysforward/src/tracer/: decoder.rs  encoder.rs  file_descriptor.rs  filtering.rs  mod.rs  tracer_engine.rs
sysforward/src/tracer_engine/: decoder.rs  filtering.rs  mod.rs
sysfwd/: Cargo.toml  README.md
sysfwd/decoding_macro/: Cargo.toml
sysfwd/decoding_macro/src/: lib.rs
sysfwd/src/: lib.rs
sysfwd/src/arch/: mod.rs
sysfwd/src/arch/mipso32/: mod.rs  syscall_table.rs
sysfwd/src/arch/x86_64/: mod.rs  syscall_table.rs
sysfwd/src/arch/x86_64_x32/: mod.rs  syscall_table.rs
sysfwd/src/executor/: executor_engine.rs  mod.rs
sysfwd/src/executor_engine/: executor_engine.rs  mod.rs
sysfwd/src/memory/: mod.rs
sysfwd/src/migration/: elfdump.rs  mod.rs
sysfwd/src/protocol/: control.rs  data.rs  mod.rs
sysfwd/src/syscall/: access.rs  args.rs  decoder.rs  dirent.rs  encoder.rs  epoll.rs  execve.rs  exit.rs  fallocate.rs  file_handle.rs  filesystem.rs  getrandom.rs  io.rs  ioctl.rs  lseek.rs  memfd.rs  mknod.rs  mmap.rs  mod.rs  open.rs  prctl.rs  renameat.rs  resource.rs  robust_list.rs  rseq.rs  stat.rs  statx.rs  tid.rs  truncate.rs  x86.rs
sysfwd/src/syscall/syscalls/: access.rs  dirent.rs  epoll.rs  execve.rs  (+23 more)
sysfwd/src/targets/: mod.rs  operation.rs  ptrace.rs  qemu.rs
sysfwd/src/tracer/: decoder.rs  encoder.rs  file_descriptor.rs  filtering.rs  mod.rs  tracer_engine.rs
(+33 files in other folders)
