[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chestburster"
version = "0.1.0"
authors = [
  { name="Paul L.R. Olivier", email="paul.olivier@laas.fr" },
]
description = "Rehost processes betweeb different hosts and forward syscalls"
readme = "README.md"
requires-python = ">=3.8"
classifiers = []
dependencies = [
  'avatar2',
  'paramiko',
  'ipython',
]

[project.urls]
"Homepage" = "https://example.com"