[package]
name = "ptracer"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysforward = { version = "0.0.1", path = "../sysforward" }
filters = { version = "0.0.1", path = "../filters" }
libc = "0.2"
nix = "0.25.0"
