[package]
name = "pexecutor"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["plrolivier <olivier.paul.lr@gmail.com>"] 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysfwd = { version = "0.1.0", path ="../../sysfwd" }
libc = "0.2"
nix = "0.25.0"
