[package]
name = "ptracer"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysfwd = { version = "0.0.1", path = "../../sysfwd" }
sysfwd_filter = { version = "0.0.1", path = "../../sysfwd_filter" }
libc = "0.2"
nix = "0.25.0"
